Configure applicaion.properties to enable h2 console and logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,24 @@
 spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
+
+# enabling h2 console
 spring.h2.console.enabled=true
+
+# turn statistics on
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=debug
+
+# show all queries
+spring.jpa.show-sql=true
+
+# see parameters that are sent
+logging.level.org.hibernate.type=trace
+
+# query formatting
+# spring.jap.properties.hibernate is used to customize hibernate
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
 spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.defer-datasource-initialization=true
+#logging.level.root=debug
