--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
+#spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
 
 # enabling h2 console
 spring.h2.console.enabled=true
@@ -14,11 +14,8 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.type=trace
 
 # query formatting
-# spring.jap.properties.hibernate is used to customize hibernate
+# spring.jpa.properties.hibernate is used to customize hibernate
 spring.jpa.properties.hibernate.format_sql=true
 
 
-
-spring.data.jpa.repositories.bootstrap-mode=default
-spring.jpa.defer-datasource-initialization=true
 #logging.level.root=debug
